--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1,5 +1,16 @@
 % Encoding: UTF-8
 
+@Book{2010,
+  title     = {Computational Social Network Analysis},
+  publisher = {Springer},
+  year      = {2010},
+  author    = {Abraham, A. and Hassanien, A.-E. and Snásel, V.},
+  series    = {Computer Communications and Networks},
+  doi       = {10.1007/978-1-84882-229-0},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @Book{Aarne1961,
   title     = {The types of the folktale: a classification and bibliography},
   publisher = {Academia Scientarum Fennica},
@@ -529,6 +540,16 @@
   doi       = {10.1145/2601412},
   owner     = {Vincent},
   timestamp = {2016.03.23},
+}
+
+@Book{Aggrawal2022,
+  title     = {Social Networks: Modelling and Analysis},
+  publisher = {CRC Press},
+  year      = {2022},
+  author    = {Aggrawal, N. and Anand, A.},
+  doi       = {10.1201/9781003088066},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InProceedings{Agichtein2000,
@@ -2434,6 +2455,19 @@
   url       = {http://www.gallimard.fr/Catalogue/GALLIMARD/Folio/Folio-histoire/Politiques-de-la-Revolution-francaise},
 }
 
+@Article{Badar2016,
+  author    = {Badar, K. and Frantz, T. L. and Jabeen, M.},
+  title     = {Research performance and degree centrality in co-authorship networks},
+  journal   = {Aslib Journal of Information Management},
+  year      = {2016},
+  volume    = {68},
+  number    = {6},
+  pages     = {756-771},
+  doi       = {10.1108/ajim-07-2016-0103},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @Article{Bae2016,
   author    = {Bae, A. and Park, D. and Ahn, Y.-Y. and Park, J.},
   title     = {The Multi-Scale Network Landscape of Collaboration},
@@ -3240,6 +3274,19 @@
   doi       = {10.1002/smj.2345},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Barry1989,
+  author    = {Barry, T. F.},
+  title     = {Love and the Politics of Paternalism: Images of the Father in Schiller's Kabale und Liebe},
+  journal   = {Colloquia Germanica},
+  year      = {1989},
+  volume    = {22},
+  number    = {1},
+  pages     = {21-37},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.jstor.org/stable/23980729},
 }
 
 @Book{Barry2004,
@@ -4483,6 +4530,16 @@
   url       = {https://books.google.fr/books?id=qTbBAYVv_KkC},
 }
 
+@Book{Betti2015,
+  title     = {An Introduction to Drama},
+  publisher = {Dar Nippur},
+  year      = {2015},
+  author    = {Betti, M. J.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://ebin.pub/an-introduction-to-drama.html},
+}
+
 @Article{Beveridge2016,
   author    = {Beveridge, A. and Shan, J.},
   title     = {Network of Thrones},
@@ -4507,6 +4564,19 @@
   doi       = {10.4324/9781315114668-13},
   owner     = {Vincent},
   timestamp = {2020.11.17},
+}
+
+@Article{Beyers2014,
+  author    = {Beyers, J. and Donas, T.},
+  title     = {Inter-regional networks in Brussels: Analyzing the information exchanges among regional offices},
+  journal   = {European Union Politics},
+  year      = {2014},
+  volume    = {15},
+  number    = {4},
+  pages     = {547-571},
+  doi       = {10.1177/1465116514536269},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Beyhan2020,
@@ -6043,6 +6113,16 @@
   url       = {https://www.semanticscholar.org/paper/The-Chinese-in-the-Caribbean-Wilson/ea415ebf1ff5709f53d63303432498bffe34c5ba},
 }
 
+@Book{Boulton2013,
+  title     = {The Anatomy of Drama},
+  publisher = {Routledge},
+  year      = {2013},
+  author    = {Boulton, M.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.routledge.com/The-Anatomy-of-Drama-Routledge-Revivals/Boulton/p/book/9780415722513},
+}
+
 @Article{Bounegru2016,
   author    = {Bounegru, L. and Venturini, T. and Gray, J. and Jacomy, M.},
   title     = {Narrating Networks: Exploring the affordances of networks as storytelling devices in journalism},
@@ -6089,6 +6169,19 @@
   doi       = {10.1037/a0037839},
   owner     = {Vincent},
   timestamp = {2019.04.07},
+}
+
+@Article{Bowers1982,
+  author    = {Bowers, F.},
+  title     = {Climax and Protagonist in Shakespeare's Dramatic Structure},
+  journal   = {South Atlantic Review},
+  year      = {1982},
+  volume    = {47},
+  number    = {2},
+  pages     = {22},
+  doi       = {10.2307/3199208},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Bowman2012,
@@ -8335,11 +8428,12 @@ arXiv: https://arxiv.org/abs/1709.07604},
   author        = {Cazabet, R. and Rossetti, G. and Amblard, F.},
   title         = {Dynamic Community Detection},
   booktitle     = {Encyclopedia of Social Network Analysis and Mining},
+  publisher     = {Springer},
   year          = {2017},
   __markedentry = {[Vincent:]},
+  doi           = {10.1007/978-1-4614-7163-9_383-1},
   owner         = {Vincent},
   timestamp     = {2017.08.05},
-  url           = {https://www.researchgate.net/profile/Remy_Cazabet/publication/318165883_Dynamic_Community_Detection/links/5964c1400f7e9bfb63cb830d/Dynamic-Community-Detection.pdf},
 }
 
 @InProceedings{Celikyilmaz2010,
@@ -11910,6 +12004,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.04.27},
 }
 
+@Article{deLaat2007,
+  author    = {de Laat, M. and Lally, V. and Lipponen, L. and Simons, R.-J.},
+  title     = {Investigating patterns of interaction in networked learning and computer-supported collaborative learning: A role for Social Network Analysis},
+  journal   = {International Journal of Computer-Supported Collaborative Learning},
+  year      = {2007},
+  volume    = {2},
+  pages     = {87--103},
+  doi       = {10.1007/s11412-007-9006-4},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @InProceedings{DelCorro2013,
   author    = {Del Corro, L. and Gemulla, R.},
   title     = {ClausIE: clause-based open information extraction},
@@ -12502,6 +12608,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1109/ICCV.2011.6126306},
   owner     = {Vincent},
   timestamp = {2018.11.11},
+}
+
+@Article{DiPietro2012,
+  author    = {Di Pietro, L. and Pantano, E.},
+  title     = {An empirical investigation of social network influence on consumer purchasing decision: The case of Facebook},
+  journal   = {Journal of Direct, Data and Digital Marketing Practice},
+  year      = {2012},
+  volume    = {14},
+  pages     = {18-29},
+  doi       = {10.1057/dddmp.2012.10},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Book{Dissenyake1992,
@@ -13739,6 +13857,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://aclweb.org/anthology/papers/P/P13/P13-1012/},
 }
 
+@Article{Dvoretzky1966,
+  author    = {Dvoretzky, E.},
+  title     = {Lessing in Schiller's ``Kabale und Liebe'},
+  journal   = {Modern Philology},
+  year      = {1966},
+  volume    = {63},
+  number    = {4},
+  pages     = {311-318},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.jstor.org/stable/436121},
+}
+
 @Book{Dzelzainis2011,
   title     = {The Politics of Paradise Lost},
   publisher = {Oxford University Press},
@@ -14341,6 +14472,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.bartleby.com/200/sw9.html},
 }
 
+@Article{ElKhatib2015,
+  author    = {El-Khatib, R. and Fogel, K. and Jandik, T.},
+  title     = {{CEO} network centrality and merger performance},
+  journal   = {Journal of Financial Economics},
+  year      = {2015},
+  volume    = {116},
+  number    = {2},
+  pages     = {349-382},
+  doi       = {10.1016/j.jfineco.2015.01.001},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @PhdThesis{Elliot1992,
   author    = {Elliot, C.},
   title     = {The Affective Reasoner: A Process Model of Emotions in a Multi-agent System},
@@ -14739,6 +14883,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1111/soc4.12237},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@InCollection{Erlin2014,
+  author    = {Erlin, M.},
+  title     = {The Location of Literary History: Topic Modeling, Network Analysis, and the German Novel, 1731-1864},
+  booktitle = {Distant Readings: Topologies of German Culture in the Long Nineteenth Century},
+  publisher = {Boydell \& Brewer},
+  year      = {2014},
+  chapter   = {2},
+  pages     = {55-90},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.cambridge.org/core/books/abs/distant-readings/location-of-literary-history-topic-modeling-network-analysis-and-the-german-novel-17311864/D9312262DCF1ACFEA3B72965138A6ECD},
 }
 
 @InProceedings{Ernastuti2016,
@@ -18746,6 +18903,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.jstor.org/stable/10.3366/j.ctt1r26bz},
 }
 
+@Article{Goswell2021,
+  author    = {Goswell, G.},
+  title     = {The Main Character of the Book of Esther: The Contribution of the Textual Divisions and the Assigned Titles of the Book of Esther to Uncovering Its Protagonist},
+  journal   = {Journal for the Study of the Old Testament},
+  year      = {2021},
+  volume    = {46},
+  number    = {2},
+  pages     = {193-205},
+  doi       = {10.1177/03090892211032243},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @InProceedings{Goto2008,
   author    = {Goto, J. and Yagi, Y. and Aizawa, A. and Sekine, S.},
   title     = {Generation of correlation charts from TV programs based on anaphora resolution},
@@ -19408,6 +19578,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1111/j.1467-9280.2007.02027.x},
   owner     = {Vincent},
   timestamp = {2022.06.21},
+}
+
+@Book{Grill2018,
+  title     = {The Routledge Handbook of the Philosophy of Paternalism},
+  publisher = {Routledge},
+  year      = {2018},
+  author    = {Grill, K. and Hanna, J.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.routledge.com/The-Routledge-Handbook-of-the-Philosophy-of-Paternalism/Grill-Hanna/p/book/9780367735364},
 }
 
 @Article{Grimm2005,
@@ -26261,6 +26441,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cambridge.org/core/books/political-networks/56C92B4EA992885588CDB331E92FEC92},
 }
 
+@Book{Knoke2020,
+  title     = {Social Network Analysis},
+  publisher = {Sage},
+  year      = {2020},
+  author    = {Knoke, D. and Yang, S.},
+  doi       = {10.4135/9781506389332},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @Article{Knop-Huelss2019,
   author    = {Knop-Huelss, K. and Rieger, D. and Schneider, F. M.},
   title     = {Thinking About Right and Wrong: Examining the Effect of Moral Conflict on Entertainment Experiences, and Knowledge},
@@ -26272,6 +26462,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/15213269.2019.1623697},
   owner     = {Vincent},
   timestamp = {2021.12.15},
+}
+
+@Book{Knott2005,
+  title     = {Women, Gender and Enlightenment},
+  publisher = {Palgrave Macmillan},
+  year      = {2005},
+  author    = {Knott, S. and Taylor, B.},
+  doi       = {10.1057/9780230554801},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Book{Knowles1998,
@@ -26604,6 +26804,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/s0923-5965(00)00011-4},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Kord1997,
+  author    = {Kord, S.},
+  title     = {The Curtain Never Rises: Femininity and Theater Censorship in Eighteenth- and Nineteenth-Century Germany},
+  journal   = {German Quarterly},
+  year      = {1997},
+  volume    = {70},
+  number    = {4},
+  pages     = {358},
+  doi       = {10.2307/408069},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Kordsmeyer2017,
@@ -27170,6 +27383,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@Article{Kruskal1964,
+  author    = {Kruskal, J. B.},
+  title     = {Multidimensional scaling by optimizing goodness of fit to a nonmetric hypothesis},
+  journal   = {Psychometrika},
+  year      = {1964},
+  volume    = {29},
+  pages     = {1-27},
+  doi       = {10.1007/bf02289565},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @Article{Ku2007,
   author    = {Ku, L.-W. and Chen, H.-H.},
   title     = {Mining opinions from the Web: Beyond relevance retrieval},
@@ -27202,6 +27427,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqab012},
   owner     = {Vincent},
   timestamp = {2021.03.27},
+}
+
+@Article{Kubis2021a,
+  author    = {Kubis, M.},
+  title     = {Quantitative analysis of character networks in Polish 19th- and 20th-century novels},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2021},
+  volume    = {36},
+  number    = {Supplement\_2},
+  pages     = {ii175-ii181},
+  doi       = {10.1093/llc/fqab012},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Kuchaiev2011,
@@ -27739,6 +27977,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.13},
 }
 
+@Article{Ladegaard2021,
+  author    = {Ladegaard, J. and Kristensen-McLachlan, R. D.},
+  title     = {Prodigal Heirs and Their Social Networks in Early Modern English Drama, 1590-1640},
+  journal   = {Law \& Literature},
+  year      = {2021},
+  volume    = {35},
+  number    = {1},
+  pages     = {31-53},
+  doi       = {10.1080/1535685x.2021.1902635},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @InProceedings{Lafferty2001,
   author    = {Lafferty, J. D. and McCallum, A. and Pereira, F. C. N.},
   title     = {Conditional random fields: Probabilistic models for segmenting and labeling sequence data},
@@ -27843,6 +28094,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.joi.2007.07.001},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Lamertz2004,
+  author    = {Lamertz, K. and Aquino, K.},
+  title     = {Social Power, Social Status and Perceptual Similarity of Workplace Victimization: A Social Network Analysis of Stratification},
+  journal   = {Human Relations},
+  year      = {2004},
+  volume    = {57},
+  number    = {7},
+  pages     = {795-822},
+  doi       = {10.1177/0018726704045766},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @Article{Lamport1978,
@@ -28390,6 +28654,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.08.30},
   url       = {https://www.gutenberg.org/ebooks/5678},
+}
+
+@Article{Leavitt1951,
+  author    = {Leavitt, H. J.},
+  title     = {Some effects of certain communication patterns on group performance},
+  journal   = {Journal of Abnormal and Social Psychology},
+  year      = {1951},
+  volume    = {46},
+  number    = {1},
+  pages     = {38-50},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://psycnet.apa.org/record/1951-07439-001},
 }
 
 @Article{Leavitt2011,
@@ -30161,6 +30438,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/502512.502558},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Lin2001a,
+  title     = {Social Capital: A Theory of Social Structure and Action},
+  publisher = {Cambridge University Press},
+  year      = {2001},
+  author    = {Lin, N.},
+  doi       = {10.1017/cbo9780511815447},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InCollection{Lin2003,
@@ -34938,7 +35225,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Moon2006,
   author    = {Moon, I.-C. and Schneider, M. and Carley, K. M.},
-  title     = {Evolution of Player Skill in the America{\textquotesingle}s Army Game},
+  title     = {Evolution of Player Skill in the America's Army Game},
   journal   = {Simulation},
   year      = {2006},
   volume    = {82},
@@ -37055,6 +37342,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1103.2903},
 }
 
+@Article{Nieminen1974,
+  author    = {Nieminen, J.},
+  title     = {On centrality in a graph},
+  journal   = {Scandinavian Journal of Psychology},
+  year      = {1974},
+  volume    = {15},
+  number    = {1},
+  pages     = {322-336.},
+  doi       = {10.1111/j.1467-9450.1974.tb00598.x},
+  owner     = {Vincent},
+  timestamp = {2017.10.26},
+}
+
 @Book{Nietzsche1956,
   title     = {The Birth of Tragedy and the Genealogy of Morals},
   publisher = {Doubleday},
@@ -37695,6 +37995,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url         = {https://hummedia.manchester.ac.uk/schools/soss/research/mitchell/covertnetworks/wp/working_paper1.pdf},
 }
 
+@Article{OMalley2008,
+  author    = {O'Malley, A. J. and Marsden, P. V.},
+  title     = {The analysis of social networks},
+  journal   = {Health Services and Outcomes Research Methodology},
+  year      = {2008},
+  volume    = {8},
+  number    = {4},
+  pages     = {222-269},
+  doi       = {10.1007/s10742-008-0041-z},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @Article{OMeara2016,
   author    = {O'Meara, J.},
   title     = {What ``The Bechdel Test'' doesn't tell us: examining women's verbal and vocal (dis)empowerment in cinema},
@@ -37898,6 +38211,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/19.3.289},
   owner     = {Vincent},
   timestamp = {2019.01.18},
+}
+
+@Article{Ostovari2019,
+  author    = {Ostovari, M. and Steele-Morris, C.-J. and Griffin, P. M. and Yu, D.},
+  title     = {Data-driven modeling of diabetes care teams using social network analysis},
+  journal   = {Journal of the American Medical Informatics Association},
+  year      = {2019},
+  volume    = {26},
+  number    = {10},
+  pages     = {911-919},
+  doi       = {10.1093/jamia/ocz022},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InProceedings{OstroumovaProkhorenkova2016,
@@ -39468,6 +39794,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://ceur-ws.org/Vol-2723/short8.pdf},
 }
 
+@Book{Pickering2005,
+  title     = {Key Concepts in Drama and Performance},
+  publisher = {Palgrave Macmillan},
+  year      = {2005},
+  author    = {Pickering, K.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://books.google.fr/books/?id=TzxGEAAAQBAJ},
+}
+
 @Book{Pierce1878,
   title     = {The Dickens Dictionary},
   publisher = {Chapman and Hall},
@@ -39584,6 +39920,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/1639714.1639731},
   owner     = {Vincent},
   timestamp = {2019.03.27},
+}
+
+@Article{Pincot2021,
+  author    = {Pincot, D. D. A. and Ledda, M. and Feldmann, M. J. and Hardigan, M. A. and Poorten, T. J. and Runcie, D. E. and Heffelfinger, C. and Dellaporta, S. L. and Cole, G. S. and Knapp, S. J.},
+  title     = {Social network analysis of the genealogy of strawberry: retracing the wild roots of heirloom and modern cultivars},
+  journal   = {G3 Genes|Genomes|Genetics},
+  year      = {2021},
+  volume    = {11},
+  number    = {3},
+  pages     = {jkab015},
+  doi       = {10.1093/g3journal/jkab015},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
+@InCollection{Piper2014,
+  author    = {Piper, A. and Algee-Hewitt, M.},
+  title     = {The Werther Effect I: Goethe, Objecthood, and the Handling of Knowledge},
+  booktitle = {Distant Readings: Topologies of German Culture in the Long Nineteenth Century},
+  publisher = {Boydell \& Brewer},
+  year      = {2014},
+  chapter   = {6},
+  pages     = {155-184},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.cambridge.org/core/books/abs/distant-readings/werther-effect-i-goethe-objecthood-and-the-handling-of-knowledge/AA261DC5CE8DE5EE5F614B178078563E},
 }
 
 @InProceedings{Piper2016,
@@ -41304,6 +41666,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://www.crcpress.com/Digital-Image-Sequence-Processing-Compression-and-Analysis/Reed/p/book/9780849315268},
+}
+
+@Article{Reed2019,
+  author    = {Reed, A.},
+  title     = {Reading Minor Characters: An English Literary Society and Its Culture of Investigation},
+  journal   = {PMLA/Publications of the Modern Language Association of America},
+  year      = {2019},
+  volume    = {134},
+  number    = {1},
+  pages     = {66-80},
+  doi       = {10.1632/pmla.2019.134.1.66},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InCollection{Regan2009,
@@ -44559,6 +44934,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   url       = {https://www.linguateca.pt/Diana/download/Schochetal2021.pdf},
 }
 
+@Article{Schoff1962,
+  author    = {Schoff, F. G.},
+  title     = {King Lear: Moral Example or Tragic Protagonist?},
+  journal   = {Shakespeare Quarterly},
+  year      = {1962},
+  volume    = {13},
+  number    = {2},
+  pages     = {157},
+  doi       = {10.2307/2866785},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @InProceedings{Scholand2010,
   author    = {Scholand, A. and Tausczik, Y. and Pennebaker, J.},
   title     = {Linguistic analysis of workplace computer-mediated communication},
@@ -44977,6 +45365,16 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2019.03.28},
   url       = {https://uk.sagepub.com/en-gb/eur/social-network-analysis/book249668},
+}
+
+@Book{Scott2011,
+  title     = {The Sage Handbook of Social Network Analysis},
+  publisher = {Sage},
+  year      = {2011},
+  author    = {Scott, J. and Carrington, P. J.},
+  owner     = {Vincent},
+  timestamp = {2019.04.26},
+  url       = {https://uk.sagepub.com/en-gb/eur/the-sage-handbook-of-social-network-analysis/book232753},
 }
 
 @InProceedings{Sculley2009,
@@ -47046,6 +47444,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2019.04.05},
   url       = {https://trove.nla.gov.au/work/22034492?q&versionId=44735493},
+}
+
+@Article{Stage2016,
+  author    = {Stage, K.},
+  title     = {Networking with Middleton and Jonson: Theater, Law, and Social Documents},
+  journal   = {English Literary Renaissance},
+  year      = {2016},
+  volume    = {46},
+  number    = {1},
+  pages     = {60-92},
+  doi       = {10.1111/1475-6757.12062},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InProceedings{Stallkamp2007,
@@ -51630,6 +52041,19 @@ arXiv: http://arxiv.org/abs/1410.3560},
   timestamp = {2019.04.10},
 }
 
+@Article{Wang2011a,
+  author    = {Wang, J. and Mo, H. and Wang, F. and Jin, F.},
+  title     = {Exploring the network structure and nodal centrality of China's air transport network: A complex network approach},
+  journal   = {Journal of Transport Geography},
+  year      = {2011},
+  volume    = {19},
+  number    = {4},
+  pages     = {712-721},
+  doi       = {10.1016/j.jtrangeo.2010.08.012},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+}
+
 @InProceedings{Wang2013,
   author    = {Wang, Y. and Wang, L. and Li, Y. and He, D. and Liu, T.-Y.},
   title     = {A Theoretical Analysis of NDCG Type Ranking Measures},
@@ -51641,6 +52065,17 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2021.07.02},
   url       = {http://proceedings.mlr.press/v30/Wang13.html},
+}
+
+@InProceedings{Wang2013a,
+  author    = {Wang, B. and Wang, C. and Bu, J. and Chen, C. and Zhang, W. V. and Cai, D. and He, X.},
+  title     = {Whom to mention: expand the diffusion of tweets by @ recommendation on micro-blogging systems},
+  booktitle = {22nd international conference on World Wide Web},
+  year      = {2013},
+  pages     = {1331-1340},
+  doi       = {10.1145/2488388.2488505},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
 }
 
 @InProceedings{Wang2013q,
@@ -51868,6 +52303,16 @@ arXiv: http://arxiv.org/abs/1410.3560},
   owner     = {Vincent},
   timestamp = {2010.12.18},
   url       = {http://www.cambridge.org/zw/academic/subjects/sociology/sociology-general-interest/social-network-analysis-methods-and-applications},
+}
+
+@Book{Watson1983,
+  title     = {Drama},
+  publisher = {Macmillan},
+  year      = {1983},
+  author    = {Watson, G. J.},
+  owner     = {Vincent},
+  timestamp = {2023.03.17},
+  url       = {https://www.abebooks.com/Drama-Introduction-Watson-G-J-Macmillan/30770337753/bd},
 }
 
 @InProceedings{Watson2019,
